x close button mobile fixed

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -10,6 +10,11 @@
   color: black;
 }
 
+.icon-button {
+  position: fixed;
+  top: 0;
+  right: 0;
+}
 @media (max-width: 991px) {
   .navbar-container {
     display: flex;
